?? ??? 20??, PHP 5.2.12
- Fixed a safe_mode bypass in tempnam() identified by Grzegorz Stachowiak.  
  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak.  (Rasmus)
- Fixed bug #49698 (Unexpected change in strnatcasecmp()). (Rasmus)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49630 (imap_listscan function missing). (Felipe)
- Fixed bug #49578 (make install-pear fails). (Hannes)
- Fixed bug #49536 (mb_detect_encoding() returns incorrect results when
  mbstring.strict_mode is turned on). (Moriyoshi)
- Fixed bug #49531 (CURLOPT_INFILESIZE sometimes causes warning "CURLPROTO_FILE
  cannot be set"). (Felipe)
- Fixed bug #49517 (cURL's CURLOPT_FILE prevents file from being deleted after
  fclose). (Ilia)
- Fixed bug #49354 (mb_strcut() cuts wrong length when offset is in the middle
  of a multibyte character). (Moriyoshi)
- Fixed bug #49528 (UTF-16 strings prefixed by BOMs wrongly converted).
  (Moriyoshi)
- Fixed bug #48805 (IPv6 socket transport is not working). (Ilia)
- Fixed bug #49738 (calling mcrypt after mcrypt_generic_deinit crashes).
  (Sriram Natarajan)

17 Sep 2009, PHP 5.2.11
- Fixed certificate validation inside php_openssl_apply_verification_policy.
  (Ryan Sleevi, Ilia)
- Updated timezone database to version 2009.13 (2009m) (Derick)
- Added missing sanity checks around exif processing. (Ilia)
- Fixed sanity check for the color index in imagecolortransparent. (Pierre)
- Fixed zlib.deflate compress filter to actually accept level parameter. (Jani)
- Fixed leak on error in popen/exec (and related functions) on Windows.
  (Pierre)
- Fixed regression in cURL extension that prevented flush of data to output
  defined as a file handle. (Ilia)
- Fixed memory leak in stream_is_local(). (Felipe, Tony)

- Fixed bug #49470 (FILTER_SANITIZE_EMAIL allows disallowed characters). (Ilia)
- Fixed bug #49447 (php engine needs to correctly check for socket API return
  status on windows). (Sriram Natarajan)